Updated project title.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-slicer",
   "version": "1.0.0",
-  "description": "A Node.js project to read a JSON file and write the first 500 entries in pretty print mode",
+  "description": "Tool to import conversations from ChatGPT as Obsidian notes.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
